--- a/lib/macroni/Translation/CMakeLists.txt
+++ b/lib/macroni/Translation/CMakeLists.txt
@@ -1,16 +1,7 @@
-add_library(macroni_translation_api STATIC
-    MacroniCodeGenVisitorMixin.cpp
-)
+add_library(macroni_translation_api STATIC MacroniCodeGenVisitorMixin.cpp)
 
-target_link_libraries(macroni_translation_api
-  PRIVATE
-    clangAST
-    clangASTMatchers
-    clangBasic
-
-    MLIRSupport
-
-    macroni::settings
-)
+target_link_libraries(
+  macroni_translation_api PRIVATE clangAST clangASTMatchers clangBasic
+                                  MLIRSupport macroni::settings)
 
 add_library(macroni::translation_api ALIAS macroni_translation_api)
