Explicitly link to PASTA
Explicitly link PASTA to Macroni targets which use them.

--- a/lib/macroni/Translation/Macroni/CMakeLists.txt
+++ b/lib/macroni/Translation/Macroni/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(macroni_translation_api STATIC PastaMetaGenerator.cpp
                                            MacroniVisitor.cpp)
-target_link_libraries(macroni_translation_api PRIVATE macroni_settings
-                                                      macroni_common)
+target_link_libraries(
+  macroni_translation_api PRIVATE macroni_settings pasta pasta_cxx_settings
+                                  macroni_common)
 add_library(macroni::translation_api ALIAS macroni_translation_api)
